# Filename: CMakeLists.txt
# Created on: November  5, 2023
# Author: Lucas Araújo <araujolucas@dcc.ufmg.br>

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(DataStructures)

SET(CMAKE_CXX_STANDARD)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET(UNIT_TEST_DIR ${CMAKE_SOURCE_DIR}/test/unit)
SET(INC_DIR ${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/libs)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# Get all files in the folders SRC_DIR and UNIT_TEST_DIR
AUX_SOURCE_DIRECTORY(${SRC_DIR} PROGRAM)
AUX_SOURCE_DIRECTORY(${UNIT_TEST_DIR} UNIT_TESTS)

INCLUDE_DIRECTORIES(${INC_DIR})
INCLUDE_DIRECTORIES(${INC_DIR}/lib)

# Define the libs
ADD_LIBRARY(dataStructures ${PROGRAM})
TARGET_LINK_LIBRARIES(dataStructures)

ADD_EXECUTABLE(program ${PROGRAM})
ADD_EXECUTABLE(unit_test ${UNIT_TESTS})

# Link lib to test
TARGET_LINK_LIBRARIES(unit_test dataStructures)
